[project]
name = "mem0-mcp"
version = "0.1.0"
description = "MCP Server with Mem0 for Managing Coding Preferences (Local Hybrid Mode)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "mem0ai>=0.1.55",
    "python-dotenv>=1.0.1",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
    "chromadb>=0.4.0",
    "flask>=3.0.0",
]
